# nidusscraper

./: README.md  pyproject.toml
.github/workflows/: ci.yml
nidus_scraper/: __init__.py  config.py  github.py  runners.py  standards.py  utils.py  vendor_domains.json  vendor_pages.py  vendors.py
tests/: test_github_scraper.py  test_standards.py  test_utils.py  test_vendor_pages.py  test_vendors.py
