[tool.poetry]
name = "nidus_scraper"
version = "0.1.0"
description = "Async scraper for robotics hardware files"
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [{include = "nidus_scraper"}]

[tool.poetry.scripts]
crawl-all = "nidus_scraper.runners:main"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8"
aiofiles = "^23.2"
beautifulsoup4 = "^4.12"
python-dotenv = "^1.0"
tqdm = "^4.66"

pyppeteer = "^1"
=======


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
aioresponses = "^0.7"
pytest-asyncio = "^0.21"
ruff = "^0.1"
mypy = "^1.6"
pytest-cov = "^4.1"

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
addopts = "--cov=nidus_scraper.utils --cov=nidus_scraper.github --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"
